@@ -10,11 +10,15 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.item.crafting.RecipeManager;
+import net.minecraft.world.item.crafting.RecipeMap;
 import org.jetbrains.annotations.NotNull;
 import tk.bubustein.money.MoneyMod;
 import tk.bubustein.money.recipe.BankMachineRecipe;
 import tk.bubustein.money.recipe.ModRecipes;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
+
 import static tk.bubustein.money.MoneyMod.LOGGER;
 
 @JeiPlugin
@@ -34,10 +38,11 @@ public class MoneyModJEIPlugin implements IModPlugin {
     public void registerRecipes(IRecipeRegistration registration) {
         LOGGER.info("[" + MoneyMod.MOD_ID +  "] Registering recipes");
         assert Minecraft.getInstance().level != null;
-        RecipeManager recipeManager = Minecraft.getInstance().level.getRecipeManager();
-        List<BankMachineRecipe> recipes = recipeManager.getAllRecipesFor(ModRecipes.BANK_MACHINE_RECIPE.get()).stream()
+        RecipeManager recipeManager = Objects.requireNonNull(Minecraft.getInstance().level.getServer()).getRecipeManager();
+        RecipeMap recipeMap = (RecipeMap) recipeManager.getRecipes();
+        List<BankMachineRecipe> recipes = Objects.requireNonNull(recipeMap.getRecipesFor(ModRecipes.BANK_MACHINE_RECIPE.get(), null, Minecraft.getInstance().level))
                 .map(RecipeHolder::value)
-                .toList();
+                .collect(Collectors.toList());
         LOGGER.info( "[" + MoneyMod.MOD_ID +"] Loaded {} Bank Machine recipes", recipes.size());
         registration.addRecipes(BankMachineCategory.RECIPE_TYPE, recipes);
     }
